--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="mult" class="button">*</div>
         <div id="divide" class="button">/</div>
         <div id="equal" class="button">=</div>
+        <div id="clear" class="button">C</div>
         <div id="nine" class="button">9</div>
         <div id="eight" class="button">8</div>
         <div id="seven" class="button">7</div>
